# OnnxEditorV2

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  build_qt.sh  build_self.sh  check.sh  cpplint.py  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: all.yml
cmake/: FindGraphviz.cmake
docker/: linux.DockerFile  ubuntu18.04.sh
docker/dynamic/: linux.DockerFile  ubuntu22.04.sh
docker/static/: 3rd.DockerFile  linux.DockerFile  main.DockerFile  ubuntu20.04.sh  ubuntu22.04.sh
gui/: CMakeLists.txt  actions.cpp  actions.h  gui.cpp  gui.h  mainwindow.cpp  mainwindow.h
gui/config/: display.h  ui.h
gui/graph/: CMakeLists.txt  context.cpp  context.h  edge.cpp  edge.h  item.h  node.cpp  node.h  node.hpp  node_menu.cpp  node_menu.h  scene.cpp  scene.h  scene_menu.cpp  scene_menu.h  view.cpp  view.h
gui/res/: res.qrc
gui/test/: CMakeLists.txt  dialog.cpp  dialog.h  random_nodes.cpp  test.h
gui/ui/: CMakeLists.txt
gui/ui/dialog/: helper.h
gui/ui/dialog/iosummary/: iosummary.cpp  iosummary.h  iosummary.ui
gui/ui/dialog/nodesummary/: nodesummary.cpp  nodesummary.h  nodesummary.ui
gui/ui/dialog/txtlistsetdialog/: txtlistsetdialog.cpp  txtlistsetdialog.h  txtlistsetdialog.ui
gui/ui/dialog/txtsetdialog/: txtsetdialog.cpp  txtsetdialog.h  txtsetdialog.ui
gui/ui/sidebar/findsidebar/: findsidebar.cpp  findsidebar.h  findsidebar.ui
script/: _build_docker.sh  _build_in_docker.sh  _build_static_in_docker.sh  _run.sh  _run_safe.sh  appimg.sh  build_all_docker.sh  build_docker.sh  build_in_docker.sh  build_qt.sh  build_self.sh  build_static_docker.sh  build_static_in_docker.sh  check.sh  clang_format_change.sh  collect.sh  collect_safe.sh  init_rt_env.sh  init_submodules.sh  pkg_in_docker.sh
script/utils/: common.sh
unit_test/: CMakeLists.txt
unit_test/utils/: CMakeLists.txt  algorithm_test.cpp  ogdf_proxy.cpp  parser_test.cpp  simonnx_test.cpp
utils/: CMakeLists.txt
utils/algorithm/: CMakeLists.txt  graph_desc.h  layout.cpp  layout.h  parse.h  strutils.h  topo_sort.cpp  topo_sort.h
utils/onnx/: CMakeLists.txt  onnx.h  parser.cpp  parser.h
utils/simonnx/: CMakeLists.txt  context.cpp  context.h  node.cpp  node.h  object.h  onnx_help.cpp  onnx_help.h  onnx_meta.cpp  onnx_meta.h  onnx_pass.cpp  onnx_pass.h  tensor.cpp  tensor.h  treaty.h
(+35 files in other folders)
